[tool.poetry]
name = "weather_service"
version = "0.1.0"
description = "Weather Service API using FastAPI and NASA Earthdata"
authors = ["RSerran"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.2"
uvicorn = "^0.29.0"
xarray = "^2025.9.1"
earthaccess = "^0.15.1"
numpy = "^2.3.3"
pandas = "^2.3.3"
dotenv = "^0.9.9"
pydantic = "^2.11.10"
bcrypt = "^4.1.2"
pyjwt = "^2.10.1"
h5netcdf = "^1.6.4"
netcdf4 = "^1.6.5"  



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"